# math

./: CMakeLists.txt  geometry_notepad.cpp  stdafx.hpp
public/: GaussIntegr.hpp  GaussIntegrWrapper.hpp  HybridTensors.hpp  LinAlgEq.hpp  Node.hpp  NumTypes.hpp  Tensors.hpp  auxGeometry.hpp  math_constants.hpp  numeric_math.hpp  point1d.hpp  point2d.hpp  point3d.hpp  romanNumbers.hpp  tests_helper.hpp
src/: GaussIntegr.cpp  HybridTensors.cpp  Tensors.cpp  auxGeometry.cpp  numeric_math.cpp  romanNumbers.cpp
